# sample-math-api

./: LICENSE  README.md  pyproject.toml
src/calculator/: serializers.py  urls.py  views.py
src/main/: settings.py  urls.py
